--- a/css/data.css
+++ b/css/data.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #1e1e2f;
+    background-color: #121212!important;
     color: white;
     font-family: 'Gotu', sans-serif;
 
@@ -36,7 +36,7 @@ body{
     
 
 .small{
-    background-color: #27293d;
+    background-color: #202020;
     display: flex;
     flex-direction: column;
     font-size: 26px;
@@ -48,13 +48,14 @@ body{
     padding: 15px;
     font-size: 18px;
     cursor: pointer;
+    background-color: #202020;
 }
 .tablecontent:hover{
     background-color: black;
 }
 
 #myChart{
-    background-color: #27293d;
+    background-color: #202020;
     padding: 60px;
     color: green;
     cursor: pointer;
