--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgb(0, 0, 0)!important; 
+    font-family: 'Gotu', sans-serif;
+
     /* give any color you want */
 }
 
