--- a/css/data.css
+++ b/css/data.css
@@ -39,7 +39,7 @@ body{
     background-color: #202020;
     display: flex;
     flex-direction: column;
-    font-size: 26px;
+    font-size: 24px;
     padding: 25px;
     margin: 20px;
     text-align: center;
@@ -49,6 +49,9 @@ body{
     font-size: 18px;
     cursor: pointer;
     background-color: #202020;
+}
+.est{
+    font-size: 18px;
 }
 .tablecontent:hover{
     background-color: black;
