--- a/css/data.css
+++ b/css/data.css
@@ -3,7 +3,10 @@ body{
     color: white;
     font-family: 'Gotu', sans-serif;
 
-
+}
+html, body {
+    overflow-y:hidden;
+    height:100%;
 }
 *{
     margin: 0;
