--- a/css/bot.css
+++ b/css/bot.css
@@ -31,10 +31,7 @@ html, body {
 
   .botui-container {
     background-color: inherit;
-    position:fixed;
-    height: 100%;
     padding: 0px;
-    left: 0;
     overflow: auto;
   }
 
@@ -73,7 +70,29 @@ html, body {
   button.botui-actions-buttons-button {
     margin-top: 0px;
   }
-
-  #result{
-      display: none;
+  #phone{
+    position: relative;
+    /* margin-left: 30%; */
+    
   }
+  #imgPhone{
+      width: 420px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 10%);
+      /* height: 720px; */
+  }
+#help-bot{
+    /* position:absolute; */
+    /* top: 100px;
+    left: 10px; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+#result{
+  display:none;
+  margin-top: 300px;
+}
