--- a/css/bot.css
+++ b/css/bot.css
@@ -1,79 +1,84 @@
-html, body {
-    background-color: rgb(29, 26, 26);
-  }
-html, body {
-    overflow-y:hidden;
-    height:100%;
+html,
+body {
+  /* background-color: rgb(29, 26, 26); */
+  overflow-x: hidden;
+  width: 100%;
 }
-  /* ScrollBar */
+
+/* ScrollBar */
 
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #0000001f; 
-    border-radius: 10px;
+  background: #0000001f;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #7f8197; 
+  background: #7f8197;
 }
 
 .botui-container {
   background-color: inherit;
-  position:fixed;
+  position: fixed;
   height: 100%;
   padding: 0px;
   left: 0;
   overflow: auto;
 }
 
-  .botui-messages-container {
-  }
+.botui-messages-container {
+}
 
-  .botui-actions-container {
-    padding: 0px 30px;
-  }
+.botui-actions-container {
+  padding: 0px 30px;
+}
 
-  .botui-message {
-  }
+.botui-message {
+}
 
-  .botui-message-content.text {
-    background-color: #e1fafc;
-    color: #404040;
-  }
+.botui-message-content.text {
+  background-color: #ffffff;
+  color: #404040;
+}
 
-  .botui-message-content.human {
-    background-color: #f7ff61;
-    color: #404040;
-  }
+.botui-message-content.human {
+  background-color: #f7ff61;
+  color: #404040;
+}
 
-  .botui-message-content.embed {
-  }
+.botui-message-content.embed {
+}
 
-  .botui-message-content-link {
-  }
+.botui-message-content-link {
+}
 
-  .botui-actions-text-input {
-  }
+.botui-actions-text-input {
+}
 
-  .botui-actions-text-submit {
-  }
+.botui-actions-text-submit {
+}
 
-  button.botui-actions-buttons-button {
-    margin-top: 0px;
-  }
+button.botui-actions-buttons-button {
+  margin-top: 0px;
+  border-bottom-right-radius: 1.3em;
+  border-top-left-radius: 1.3em;
+  border-bottom-left-radius: 1.3em;
+  border-top-right-radius: 1.3em;
+  background-color: #0099ff;
+}
 
-  #result{
-      display: none;
-  }
+#result {
+  display: none;
+}
